description fixed, aligning of input boxes fixed, tips fixed

--- a/style.css
+++ b/style.css
@@ -50,14 +50,16 @@ body {
 	color: black;
 }
 
-a {
+.header a,
+.navbar a {
 	text-decoration: none;
 	font-size: 0.8rem;
 	font-weight: 560;
 	color: black;
 }
 
-a:hover {
+.header a:hover,
+.navbar a:hover {
 	color: blue;
 }
 .second a {
@@ -83,15 +85,19 @@ a:hover {
 	display: grid;
 	align-content: center;
 	justify-content: center;
+	align-items: center;
+
 	grid-template-columns: 28em 28rem;
 	margin-top: 2rem;
-}
-#payment {
-	grid-column: 1/2;
 }
 
 h3 {
 	grid-column: 1 / 3;
+}
+
+.item-name,
+.item-size {
+	grid-column: 2/3;
 }
 
 .note {
@@ -100,28 +106,55 @@ h3 {
 	line-height: 2;
 }
 
-.addListing select {
+.addListing select,
+.form-input {
 	height: 2.3rem;
-	width: 25rem;
+	width: 26rem;
 	margin-bottom: 1rem;
 }
 
-.addListing input {
-	height: 2.3rem;
-	width: 25rem;
-	margin-bottom: 1rem;
-}
-
-#description {
+.description {
 	grid-column: 1/3;
+	height: 9rem;
+	padding: 1.5rem;
+	font-size: 0.9rem;
 }
 
-.tips {
-	grid-column: 2/3;
+.form-start {
+	justify-self: start;
 }
 
+.form-end {
+	justify-self: end;
+}
+
+#payment,
+#shipping,
 .price {
 	grid-column: 1/2;
+}
+
+#tips,
+#ship-tips {
+	grid-column: 2/3;
+	justify-self: end;
+	font-weight: lighter;
+}
+
+#tips a,
+#ship-tips a {
+	text-decoration: none;
+	color: blue;
+}
+
+.shipping-desc {
+	grid-column: 1/3;
+	font-size: 1rem;
+	line-height: 1.5;
+}
+
+label {
+	font-weight: 580;
 }
 
 .publish {
